# mvp_umwelt_info_exploration

./: .gitignore  _quarto.yml  mvp_umwelt_info_exploaration.qmd  mvp_umwelt_info_exploaration.tex  mvp_umwelt_info_exploration.qmd  pyproject.toml  styles.css
docs/: index.html
