[project]
name = "umwelt-info-exploration"
version = "0.1.0"
description = "Exploration project"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "plotly>=5.24.1",
    "quarto>=0.1.0",
    "pandas"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
